--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://rodneyharrisonqc.com/"
 languageCode = "en-us"
 title = "Rodney Harrison QC"
